added links slide, other changes

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<h2>Domain Driven Design</h2>
 				<ul>
 					<li class="fragment">For most software projects, the primary focus should be on the domain and domain logic</li>
-					<li class="fragment">Complex domain designs should be basd on a <strong>model</strong></li>
+					<li class="fragment">Complex domain designs should be based on a <strong>model</strong></li>
 					<li class="fragment">Explore models in <i>creative collaboration between business stakeholders and implementers</i></li>
 					<li class="fragment">Speak a <strong>ubiquitous language</strong> within an explicitly <strong>bounded context</strong></li>
 				</ul>
@@ -48,9 +48,14 @@
 					<li class="fragment">Is a combination of diagrams and text</li>
 					<li class="fragment">Can be in whatever format(s) make sense</li>
 					<li class="fragment">Should make sense to both developers and stakeholders!</li>
+					<li class="fragment">Will likely change over time</li>
 				</ul>
 			</section>
 
+			<section>
+				<h2>More important</h2>
+				<p>...than the model as an artifact is <i>modeling as a continual process</i> of building and refining that model over time (with the stakeholders!) to add detail and <q>&ldquo;make implicit concepts explicit.&rdquo;</p>
+			</section>
 			<section>
 				<h2>Wat?</h2>
 				<p><a href="http://www.amazon.com/Domain-Driven-Design-Tackling-Complexity-Software/dp/0321125215/"><img src="images/blue-book.jpg"/></a></p>
@@ -71,6 +76,53 @@
 				</ul>
 			</section>
 
+			<section>
+				<h2>Takeaways</h2>
+
+			</section>
+
+			<section>
+				<h2>Don't build it</h2>
+				<p>Look for prior art, existing research and off-the-shelf solutions where possible</p>
+				<p class="fragment"><img src="images/Dont-reinvent-the-wheel.jpg"/></p>
+			</section>
+			<section>
+				<h2>Beware frameworks</h2>
+				<p>They bias design to be structured a certain way that has nothing to do with your domain</p>
+			</section>
+
+			<section>
+				<h2>Don't rebuild</h2>
+				<p>Legacy replacement projects are almost always a bad idea</p>
+				<p class="fragment">(whoops)</p>
+			</section>
+
+			<section>
+				<h2>Our modeling process needs work</h2>
+				<ul>
+					<li class="fragment">No single diagram is <strong>&ldquo;the model&rdquo;</strong></li>
+					<li class="fragment">The model needs to be viscerally comprehensible to stakeholders (not just BAs)</li>
+					<li class="fragment">Modeling is not a one-time step</li>
+					<li class="fragment">Sure, it's hard</li>
+				</ul>
+			</section>
+
+			<section>
+				<h2>Please see also</h2>
+				<ul>
+					<li><i><a href="http://www.amazon.com/Domain-Driven-Design-Tackling-Complexity-Software/dp/0321125215/">Domain-Driven Design: Tackling Complexity in the Heart of Software</a></i></li>
+					<li><i><a href="http://dddcommunity.org">DDD community site</a></i></li>
+					<li>Eric Evans on <a href="http://www.infoq.com/presentations/model-to-work-evans">Domain-Driven Design: Putting the Model to Work</a></li>
+					<li>Talks from the conference
+						<ul>
+							<li><a href="http://skillsmatter.com/podcast/design-architecture/greg-young-4081">Greg Young on Document-Based Messaging and Analysis</a></li>
+							<li><a href="http://www.slideshare.net/ziobrando/model-storming">Alberto Brandolini on Model Storming</a></li>
+							<li>Eric Evans: <a href="http://www.youtube.com/watch?v=7MaYeudL9yo">Keynote on DDD retrospective and case study</a></li>
+							<li>Robert Smallshire on <a href="http://skillsmatter.com/podcast/design-architecture/a-ddd-experience-report-book-clubs-better-designs-and-organizational-harmony">How DDD became an essential ingredient for competitive software in the energy sector</a></li>
+							<li>Vaughn Vernon on <a href="http://skillsmatter.com/podcast/design-architecture/vaughn-vernon-4259">Reactive DDD with Scala and Akka</a></li>
+						</ul>
+					</li>
+				</ul>
 		</div>
 	</div>
 
